fixed problem with input text field readability

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -10,7 +10,6 @@ html, body {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-
     font-family: 'Verdana', sans-serif;
 }
 
@@ -50,3 +49,8 @@ p{
 .deprecated-error {
     color: rgb(204, 152, 152) !important;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: darkslategray;
+    opacity: 1; /* Firefox */
+  }
